Increase dynamic increased media load scroll offset

--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, height=device-height" />
     <meta name="theme-color" content="#ffffff" />
     <meta name="description" content=pscroll" />
+    <meta http-equiv="Cache-control" content="public">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <title>pscroll</title>
   </head>
   <body>
